[project]
name = "co-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "pytest>=8.3.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langgraph>=0.5.0",
    "langchain-openai>=1.2.1",
    "numpy>=2.4.4",
    "pre-commit>=4.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
